--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+/* Change color of previous and next buttons */
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  background-color:  rgba(34, 32, 30, 0.452); /* Orange color */
+  border-radius: 50%;
+  padding: 15px;
+}
+
+/* Hover effect */
+.carousel-control-prev-icon:hover,
+.carousel-control-next-icon:hover {
+  background-color: rgba(34, 32, 30, 0.452); /* Darker orange */
+}
