--- a/src/app/Pages/landing/hero-sec/hero-sec.component.html
+++ b/src/app/Pages/landing/hero-sec/hero-sec.component.html
@@ -7,7 +7,7 @@
         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
           <h1 class="text-white h1">Discover Delicious Recipes</h1>
           <p class="p">Enter the ingredients you have, and let us find the perfect recipe for you!</p>
-          <a class="btn btn-warning btn-lg" routerLink="/search">Find Recipes</a>
+          <a class="btn btn-warning btn-lg" (click)="navigateTosearch()">Find Recipes</a>
         </div>
       </div>
   
@@ -16,7 +16,7 @@
         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
           <h1 class="text-white">Explore New Dishes</h1>
           <p>Discover new flavors with ingredients you already have at home.</p>
-          <a class="btn btn-warning btn-lg" routerLink="/search">Find Recipes</a>
+          <a class="btn btn-warning btn-lg" (click)="navigateTosearch()">Find Recipes</a>
           
 
         </div>
@@ -27,7 +27,7 @@
         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
           <h1 class="text-white">Cook with Confidence</h1>
           <p>We help you cook tasty meals with simple steps.</p>
-          <a class="btn btn-warning btn-lg" routerLink="/search">Find Recipes</a>
+          <a class="btn btn-warning btn-lg" (click)="navigateTosearch()">Find Recipes</a>
         </div>
       </div>
       <app-navbar></app-navbar>
