--- a/src/app/Pages/searchpg/navbar/navbar.component.html
+++ b/src/app/Pages/searchpg/navbar/navbar.component.html
@@ -11,7 +11,7 @@
             <a class="nav-link text-white" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" (click)="navigateTosearch()">Search Recipes</a>
+            <a class="nav-link text-white">Search Recipes</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-white" href="#">Docs</a>
